Finish security and UX cleanup
